basic header stuff

--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -9,3 +9,12 @@ body {
 #{headings()} {
   font-family: $heading-font;
 }
+
+a {
+  text-decoration: none;
+  transition: color .4s $ease-out-quart;
+
+  &:hover {
+    color: $primary !important;
+  }
+}
