--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,3 +2,7 @@
 
 @import 'global/vars';
 @import 'global/typography';
+@import 'global/grid-system';
+
+@import 'components/site-header';
+@import 'components/site-footer';
