--- a/src/scss/global/_vars.scss
+++ b/src/scss/global/_vars.scss
@@ -30,6 +30,8 @@ $true-black: #000;
 $black: #080907;
 $primary: #f4b13e;
 $primary-dark: darken($primary, 15%);
+$accent-text: #cccccc;
+$bg-gray: #f2f2f2;
 
 $bp-sm: 580px;
 $bp-md: 767px;
