--- a/src/scss/global/_grid-system.scss
+++ b/src/scss/global/_grid-system.scss
@@ -1,11 +1,11 @@
-$padding-xs: 6.25em;
-$padding-sm: 9.375em;
-$padding-md: 12.5em;
-$padding-lg: 25em;
+$padding-xs: 5.8595em;
+$padding-sm: 7.8125em;
+$padding-md: 11.7187em;
+$padding-lg: 15.625em;
 
 .k-block {
   &--md {
-    padding: $padding-xs;
+    padding: $padding-xs 0;
   }
 }
 
@@ -22,7 +22,7 @@ $padding-lg: 25em;
 @media(min-width: $bp-md) {
   .k-block {
     &--md {
-      padding: $padding-sm;
+      padding: $padding-sm 0;
     }
   }
 
@@ -36,7 +36,7 @@ $padding-lg: 25em;
 @media(min-width: $bp-xl) {
   .k-block {
     &--md {
-      padding: $padding-md;
+      padding: $padding-md 0;
     }
   }
 
