--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,14 @@
 @import 'global/vars';
 @import 'global/typography';
 @import 'global/grid-system';
+@import 'global/utils';
+@import 'global/elements';
 
 @import 'components/site-header';
 @import 'components/site-footer';
+@import 'components/hero';
+@import 'components/button';
+@import 'components/product-card';
+@import 'components/promo-slider';
+
+@import 'pages/home';
