--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,5 +12,6 @@
 @import 'components/button';
 @import 'components/product-card';
 @import 'components/promo-slider';
+@import 'components/testimonial-slider';
 
 @import 'pages/home';
