--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -110,7 +110,7 @@
   .k-hero {
     &--default {
       .k-inner {
-        padding: $padding-md 0;
+        padding: 15em 0 13em 0;
       }
     }
   }
