--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,5 +13,7 @@
 @import 'components/product-card';
 @import 'components/promo-slider';
 @import 'components/testimonial-slider';
+@import 'components/cta-banner';
+@import 'components/video-gallery';
 
 @import 'pages/home';
