minor content updates for staging

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -35,6 +35,17 @@
       color: $true-white;
     }
   }
+
+  &--dark {
+    background: $bg-dark;
+    border-color: $bg-dark;
+
+    &:hover {
+      color: $primary;
+      border-color: $primary;
+      background: $bg-dark;
+    }
+  }
 }
 
 @media(min-width: $bp-sm) {
