--- a/src/scss/global/_elements.scss
+++ b/src/scss/global/_elements.scss
@@ -4,9 +4,9 @@
   overflow: hidden;
 
   &--rounded {
-    .k-figure--liner {
+    img {
       border-radius: .667em;
-      overflow: hidden;
+      // overflow: hidden;
     }
   }
 
@@ -19,6 +19,7 @@
   position: absolute;
   z-index: -1;
   height: 100%; width: auto;
+  max-width: 100%;
   top: 50%; left: 50%;
   transform: translate(-50%, -50%);
 
