--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -1,41 +1,109 @@
 @font-face {
-  font-family: 'Recolata Regular';
+  font-family: 'Recoleta Regular';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../../../dist/fonts/Recoleta-Regular.eot') format('eot');
+  src: url('../../dist/fonts/Recoleta-Regular.eot') format('eot');
 }
 @font-face {
-  font-family: 'Recolata Regular';
+  font-family: 'Recoleta Regular';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../../../dist/fonts/Recoleta-Regular.ttf') format('ttf');
+  src: url('../../dist/fonts/Recoleta-Regular.ttf') format('ttf');
 }
 @font-face {
-  font-family: 'Recolata Regular';
+  font-family: 'Recoleta Regular';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../../../dist/fonts/Recoleta-Regular.woff') format('woff');
+  src: url('../../dist/fonts/Recoleta-Regular.woff') format('woff');
 }
 @font-face {
-  font-family: 'Recolata Regular';
+  font-family: 'Recoleta Regular';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../../../dist/fonts/Recoleta-Regular.woff2') format('woff2');
+  src: url('../../dist/fonts/Recoleta-Regular.woff2') format('woff2');
 }
 @font-face {
-  font-family: 'Recolata Regular';
+  font-family: 'Recoleta Regular';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../../../dist/fonts/RecoletaRegular.otf') format('otf');
+  src: url('../../dist/fonts/RecoletaRegular.otf') format('otf');
 }
 
+@font-face {
+  font-family: 'GT America';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('../../dist/fonts/GT-America-Light.otf') format('otf');
+}
+@font-face {
+  font-family: 'GT America';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('../../dist/fonts/gt-america-light-webfont.woff') format('woff');
+}
+@font-face {
+  font-family: 'GT America';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('../../dist/fonts/gt-america-light-webfont.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'GT America';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../../dist/fonts/GT-America-Regular.otf') format('otf');
+}
+@font-face {
+  font-family: 'GT America';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../../dist/fonts/gt-america-regular-webfont.woff') format('woff');
+}
+@font-face {
+  font-family: 'GT America';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../../dist/fonts/gt-america-regular-webfont.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'GT America';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('../../dist/fonts/GT-America-Medium.otf') format('otf');
+}
+@font-face {
+  font-family: 'GT America';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('../../dist/fonts/gt-america-medium-webfont.woff') format('woff');
+}
+@font-face {
+  font-family: 'GT America';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('../../dist/fonts/gt-america-medium-webfont.woff2') format('woff2');
+}
+
+
+
 $heading-font: 'Recoleta Regular', serif; 
-$body-font: sans-serif;
+$body-font: 'GT America', sans-serif;
 
 *,
 *:before,
@@ -49,18 +117,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   min-width: 320px;
   font-family: $body-font;
-  line-height: 1.4;
-  min-height: 10000px;
+  line-height: 1.85;
 }
 
 #{headings()} {
   font-family: $heading-font;
-  font-weight: 300;
   line-height: 1;
+  font-weight: 400;
 }
 
 .k-headline {
   font-family: $heading-font;
+  line-height: 1.225;
 
   &--xs {
     font-size: 1.5em;
@@ -82,6 +150,7 @@ body {
     font-size: 1em;
     font-family: $body-font;
     line-height: 1.4;
+    font-weight: 400;
   }
 }
 
@@ -95,7 +164,7 @@ body {
   }
 
   &--lg {
-    font-weight: 700;
+    font-weight: 500;
   }
 }
 
@@ -211,13 +280,13 @@ a {
 
 @media(min-width: $bp-max) {
   body {
-    font-size: calc(.89vw * .9);
+    font-size: .89vw;
     transition: font-size .2s $ease-out-circ;
   }
 
   .k-headline {
     &--xs {
-      font-size: 2.15em;
+      font-size: 1.9em;
     }
     
     &--sm {
