--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -56,14 +56,12 @@
   }
 
   &--pets {
-    // this one's a little fucky rn. need an asset w/ no whitespace
     .k-figure {
-      margin-bottom: -20%;
-      width: 100%;
+      width: 80%;
       overflow: hidden;
 
       &--liner {
-        padding-bottom: 61.63%;
+        padding-bottom: 151.18%;
       }
     }
   }
@@ -150,11 +148,12 @@
     }
 
     &--pets {
-      margin: -8em 0 2em 60%;
+      margin: 0 0 2em 65%;
     }
 
     &--edibles {
       width: 55%;
+      margin-top: -15em;
 
       &__text {
         max-width: 24.72em;
@@ -192,12 +191,23 @@
 
     &--edibles {
       max-width: 42em;
-      margin-top: -10em;
+      margin-top: -25em;
     }
 
     &--vape {
       margin-left: 33.33em;
+      margin-top: 0em;
       max-width: 44.16em;
+    }
+  }
+}
+
+@media(min-width: $bp-max) {
+  .k-overview {
+    &--intro {
+      &__text {
+        max-width: 45em;
+      }
     }
   }
 }
