--- a/src/scss/global/_vars.scss
+++ b/src/scss/global/_vars.scss
@@ -32,6 +32,7 @@ $primary: #f4b13e;
 $primary-dark: darken($primary, 15%);
 $accent-text: #cccccc;
 $bg-gray: #f2f2f2;
+$bg-gray-light: #fefefe;
 $bg-dark: #222222;
 $highlight: #c0d8be;
 
