--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,5 +15,6 @@
 @import 'components/testimonial-slider';
 @import 'components/cta-banner';
 @import 'components/video-gallery';
+@import 'components/product-hero';
 
 @import 'pages/home';
