--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -3,7 +3,10 @@
   top: 0; width: 100%;
   z-index: 99;
   background: $true-white;
-  box-shadow: 0 0 5px -3px $black;
+
+  &--traveling {
+    box-shadow: 0 0 5px -3px $black;
+  }
 
   &.is-open {
     .k-header {
@@ -140,8 +143,8 @@
 
     &--nav {
       z-index: 2;
-      width: 90%;
-      top: 50%; left: 5%;
+      width: 88.889%;
+      top: 50%; left: 5.55%;
       transform: translateY(-50%);
       text-align: left;
       background: transparent;
@@ -216,8 +219,8 @@
 @media(min-width: $bp-xl) {
   .k-header {
     &--nav {
-      width: 88%;
-      left: 6%;
+      width: 94.44%;
+      left: 2.78%;
     }
   }
 }
