--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,5 +16,8 @@
 @import 'components/cta-banner';
 @import 'components/video-gallery';
 @import 'components/product-hero';
+@import 'components/product-details';
+@import 'components/product-latest-batch';
+@import 'components/product-faq-accordion';
 
 @import 'pages/home';
