--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -5,7 +5,7 @@
   background: $true-white;
 
   &--traveling {
-    box-shadow: 0 0 5px -3px $black;
+    box-shadow: 0 0 1px #ddd;
   }
 
   &.is-open {
