--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,5 +19,7 @@
 @import 'components/product-details';
 @import 'components/product-latest-batch';
 @import 'components/product-faq-accordion';
+@import 'components/product-reviews';
+@import 'components/product-video';
 
 @import 'pages/home';
