--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,5 +21,6 @@
 @import 'components/product-faq-accordion';
 @import 'components/product-reviews';
 @import 'components/product-video';
+@import 'components/video-players';
 
 @import 'pages/home';
