--- a/src/scss/global/_elements.scss
+++ b/src/scss/global/_elements.scss
@@ -4,12 +4,12 @@
   overflow: hidden;
 
   &--rounded {
-    img {
-      border-radius: .667em;
-    }
+    border-radius: .667em;
   }
 
   &--fpo {
+    background: $primary;
+
     &:after {
       display: block; content: 'F P O';
       position: absolute;
