bundled product type support

--- a/src/scss/components/_product-details.scss
+++ b/src/scss/components/_product-details.scss
@@ -41,7 +41,7 @@
     }
 
     &__item {
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #ccc;
 
       &.open {
         span {
