--- a/src/scss/components/_product-faq-accordion.scss
+++ b/src/scss/components/_product-faq-accordion.scss
@@ -16,7 +16,7 @@
     }
 
     &__item {
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #ccc;
 
       &:first-child {
         .k-productfaq--accordion__trigger {
