--- a/src/scss/components/_product-latest-batch.scss
+++ b/src/scss/components/_product-latest-batch.scss
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: flex-start;
     flex-flow: row nowrap;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #ccc;
 
     &:hover {
       cursor: pointer;
@@ -22,8 +22,8 @@
     &__tab {
       flex-basis: 25%;
       text-align: center;
-      border-top: 1px solid #ddd;
-      border-right: 1px solid #ddd;
+      border-top: 1px solid #ccc;
+      border-right: 1px solid #ccc;
       padding: .5em 0;
 
       span {
@@ -40,7 +40,7 @@
       }
 
       &:first-child {
-        border-left: 1px solid #ddd;
+        border-left: 1px solid #ccc;
       }
     }
   }
@@ -58,7 +58,7 @@
 
     &__column {
       flex-basis: 100%;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #ccc;
       padding: 1em 0;
 
       &:first-child {
