add-to-cart basic functionality via admin-ajax

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -23,6 +23,11 @@
 
   &--secondary {
     background: transparent;
+
+    &.on-light {
+      border-color: #ccc;
+      color: #ccc;
+    }
   }
 
   &--default {
