--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,5 +22,6 @@
 @import 'components/product-reviews';
 @import 'components/product-video';
 @import 'components/video-players';
+@import 'components/cart';
 
 @import 'pages/home';
