--- a/src/scss/global/_elements.scss
+++ b/src/scss/global/_elements.scss
@@ -1,3 +1,35 @@
+.k-header--cart {
+  position: relative;
+}
+
+#k-cartnum {
+  position: absolute;
+  top: -1.15em; left: 50%;
+  line-height: 0;
+  font-size: 75%;
+  color: $true-white;
+  opacity: 0;
+  transform: translate(-50%, 100%);
+  transition: opacity 1s $ease-out-circ,
+              transform 1s $ease-out-circ;
+
+  &.k-has-value {
+    opacity: 1;
+    transform: translate(-50%, 0);
+  }
+
+  &:after {
+    display: block; content: '';
+    position: absolute;
+    top: 0%; left: 50%;
+    width: 1.5em; height: 1.5em;
+    background: $primary;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+  }
+}
+
 .k-figure {
   margin: 0; padding: 0;
   position: relative;
